@@ -1,4 +1,6 @@
 ?:
+    Fixes #1376 - Display memory facts for AIX
+
     Fixes #1334 - Forced Facter to use LANG=C
 
     Fixes #1357 - Change ps syntax for OSX and BSD
